# SkillBoxMysite

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: db.sqlite3  log.txt  log.txt.1  log.txt.3
mysite/blogapp/: admin.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_title_alter_author_name_and_more.py
mysite/blogapp/templates/blogapp/: article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  base.html  login.html  profile_change_avatar.html  register.html  user-detail.html  users-list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: error-page.html  file-upload.html
mysite/shopapp/: admin.py  admin_mixins.py  api.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_created_by.py  0008_alter_order_options_alter_product_options_and_more.py  0009_productimage.py
(+20 files in other folders)
