[project]
name = "skillboxmysite"
version = "0.1.0"
description = ""
authors = [
    {name = "alex",email = "avc-shop@mail.ru"}
]

requires-python = ">=3.12"
dependencies = [
    "django (==5.1.1)",
    "djangorestframework (==3.15.2)",
    "django-debug-toolbar (==4.4.6)",
    "django-filter (==24.3)",
    "flake8 (>=7.1.1,<8.0.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "gunicorn (==23.0.0)",
    "pillow (==11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
