[tool.poetry]
name = "skillboxmysite"
version = "0.1.0"
description = ""
authors = ["alex"]

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.1"
django-debug-toolbar = "4.4.6"
django-filter = "24.3"
djangorestframework = "3.15.2"
gunicorn = "23.0.0"
pillow = "11.0.0"
drf-spectacular = "0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
